# inside-acropolis

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  architecture.xml  assets.xml  book.xml  buildrules.make  class-index.xml  common.xml  concepts.xml  consumers.xml  containers-codecs.xml  creative.xml  describing.xml  events.xml  glossary.xml  index.html  intro.xml  legal.xml  link-back.xml  local.css  lod.xml  media.xml  nav.xml  people.xml  places.xml  predicate-index.xml  preface.xml  publishers.xml  res-links.xml  structure.xml  styles.xml  things.xml  tools.xml  vocab-index.xml
appendices/: containers-codecs.xml  tools.xml
architecture/: Makefile  bibliography.xml  book.xml  describing.xml  index.html  preface.xml
architecture/architecture/: part.xml
architecture/developers/: api-audiences.xml  api-lookup.xml
architecture/indices/: predicate-index.xml  vocab-index.xml
architecture/res-intro/: intro.xml  part.xml
developers/: api-audiences.xml  api-conditional-access.xml  api-equivalence.xml  api-iterate.xml  api-kind.xml  api-operations.xml  api-search.xml  api-source.xml  api.xml  equivalence.xml  part.xml  retrieving-lod.xml  rights.xml
indices/: class-index.xml  licenses.xml
publisher/: Makefile  RES_resources.odg  appendix-prefixes.xml  book.xml  bringing-it-together.xml  index.html  intro.xml  labels-etc.xml  legal.xml  licensing.xml  link-describe-assets.xml  link-documents-formats.xml  museum.ttl  names-for-things.xml  notable-types.xml  prefixes.ttl  rdf-modelling-res.xml  reconciliation.xml  res-links.xml  what-res-wants.xml
publishers/: checklist.xml  editorial.xml  part.xml
res-intro/: intro.xml  lod.xml  res-rdf.xml
using/: assets.xml  common-class.xml  common-dcmi.xml  common-foaf.xml  common-generic.xml  common-rdf.xml  common-rdfs.xml  common-rights.xml  common-sameas.xml  common.xml  concepts.xml  creative.xml  events.xml  part.xml  people.xml  places.xml  platform-intro.xml  things.xml
volume_1_architecture/: Makefile
volume_1_architecture/architecture/: part.xml
volume_1_architecture/developers/: api-conditional-access.xml  api-operations.xml  api-query.xml  api.xml  best-practices.xml  editorial.xml
